Header + Footer: Add + style links, open external links in tab; refs #22612

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/header.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/header.xhtml
@@ -14,13 +14,13 @@
 <composite:implementation>
 <header class="header">
     <div class="container-fluid header__upper">
-    <div class="brand">
+    <a href="https://www.zlb.de" target="_blank" rel="noopener" class="brand">
         <img src="template/assets/img/ZLB_logo_small_white.png" alt="" class="brand__logo" />
         <div class="brand__copy">
             <div>Zentral- und</div>
             <div>Landesbibliothek Berlin</div>
         </div>
-    </div>
+    </a>
 
     <div class="actions">
         <div class="actions__lang">
