--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/footer.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/footer.xhtml
@@ -15,14 +15,14 @@
 <footer class="footer container-fluid">
     <div class="links">
         <div class="links__social">
-            <a href="#" target="_blank" rel="noopener">Facebook</a>
+            <a href="https://www.facebook.com/zentralundlandesbibliothekberlin" target="_blank" rel="noopener">Facebook</a>
         </div>
         <div class="links__legal">
             <a href="#">Impressum</a>
             <a href="#">Datenschutz</a>
         </div>
         <div class="links__goobi">
-            powered by <a href="https://goobi.io/workflow/" targe="_blank" rel="noopener">Goobi workflow</a>
+            powered by <a target="_blank" rel="noopener" href="https://goobi.io/workflow/">Goobi workflow</a>
         </div>
     </div>
 </footer>
