--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/index.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/index.scss
@@ -179,6 +179,7 @@ header .container-fluid {
 
 .brand {
   display: flex;
+  text-decoration: none;
 }
 
 .brand__logo {
@@ -187,7 +188,12 @@ header .container-fluid {
   border-right: 1px solid #fff;
 }
 
-.brand__copy {
+.brand__copy,
+.brand__copy:focus,
+.brand__copy:hover,
+.brand__copy:active,
+.brand__copy:visited {
+  color: #fff;
 }
 
 .actions {
