--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/footer.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/footer.xhtml
@@ -18,8 +18,8 @@
             <a href="https://www.facebook.com/zentralundlandesbibliothekberlin" target="_blank" rel="noopener">Facebook</a>
         </div>
         <div class="links__legal">
-            <a href="#">Impressum</a>
-            <a href="#">Datenschutz</a>
+            <a target="_blank" rel="noopener" href="https://www.zlb.de/impressum.html">Impressum</a>
+            <a target="_blank" rel="noopener" href="https://digital.zlb.de/viewer/datenschutz">Datenschutz</a>
         </div>
         <div class="links__goobi">
             powered by <a target="_blank" rel="noopener" href="https://goobi.io/workflow/">Goobi workflow</a>
