--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
@@ -627,7 +627,7 @@
                 jsf:id="createNewContact"
                 jsf:action="#{externalLoginBean.createNewContact}"
                 style="margin-bottom: 20px;"
-                class="btn btn-blank">
+                class="btn btn-primary-400 ms-auto">
                 <h:outputText value="#{msgs.login_new_createNewContact}" />
             </button>
 
@@ -743,7 +743,7 @@
         </ui:fragment>
 
         <ui:fragment rendered="#{externalLoginBean.wizzardMode=='page4'}">
-            <h2>
+            <h2 class="page__heading">
                 <h:outputText value="#{msgs.login_new_additionalData}" />
             </h2>
 
@@ -842,7 +842,7 @@
         </ui:fragment>
 
         <ui:fragment rendered="#{externalLoginBean.wizzardMode=='page5'}">
-            <h2>
+            <h2 class="page__heading">
                 <h:outputText value="#{msgs.login_new_activation}" />
             </h2>
             <section class="common-region one-col overview">
@@ -901,19 +901,21 @@
                         fieldStyle="form-control" />
                 </ui:repeat>
 
-                 <h:selectBooleanCheckbox
-                        id="activation"
-                        pt:aria-label="#{msgs.login_new_account_activation}"
-                        forceId="true"
-                        styleClass="form-check-input"
-                        value="#{externalLoginBean.activation}"
-                        required="true">
-                    </h:selectBooleanCheckbox>
-                <zlb:label
-                        labelFor="activation"
-                        labelText="#{msgs.login_new_account_activation}"
-                        labelHelpText="Lorem ipsum dolor sit amet, consetetur sadipscing elitr"
-                        labelRequired="true" />
+                <div class="form-check-wrapper">
+                     <h:selectBooleanCheckbox
+                            id="activation"
+                            pt:aria-label="#{msgs.login_new_account_activation}"
+                            forceId="true"
+                            styleClass="form-check-input"
+                            value="#{externalLoginBean.activation}"
+                            required="true">
+                        </h:selectBooleanCheckbox>
+                    <zlb:label
+                            labelFor="activation"
+                            labelText="#{msgs.login_new_account_activation}"
+                            labelHelpText="Lorem ipsum dolor sit amet, consetetur sadipscing elitr"
+                            labelRequired="true" />
+                </div>
             </section>
         </ui:fragment>
 
@@ -923,13 +925,16 @@
             </section>
         </ui:fragment>
 
+        <div class="info-required">
+            <h:outputText escape="false" value="#{msgs.login_new_account_requiredFields}" />
+        </div>
         <ui:fragment rendered="#{externalLoginBean.wizzardMode!='page1'}">
             <div class="submit form-actions form-actions--progress">
                 <button
                     jsf:rendered="#{externalLoginBean.wizzardMode!='page2'}"
                     jsf:action="#{externalLoginBean.back}"
                     jsf:id="goBack"
-                    class="btn btn-primary-400">
+                    class="btn btn-blank">
                     <h:outputText value="#{msgs.back}" />
                 </button>
                 <ui:include src="/uii/includes/zlb-progress.xhtml">
@@ -942,7 +947,7 @@
                     jsf:id="goNext"
                     jsf:action="#{externalLoginBean.next}"
                     style="margin-bottom: 20px;"
-                    class="btn btn-blank">
+                    class="btn btn-success">
                     <h:outputText value="#{msgs.next}" />
                 </button>
                 <button
@@ -950,7 +955,7 @@
                     jsf:id="createInsitution"
                     jsf:action="#{externalLoginBean.createInstitution}"
                     style="margin-bottom: 20px;"
-                    class="btn btn-primary-400">
+                    class="btn btn-success">
                     <h:outputText value="#{msgs.createInsitution}" />
                 </button>
             </div>
