Add classes for layout; refs #22612

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/external_login.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/external_login.xhtml
@@ -33,7 +33,7 @@
                         <h:outputText value="#{msgs.login}" />
                     </h2>
                     <h:form
-                        styleClass="form-validate #{externalLoginBean.uiStatus != 'accountCreation' ? '' : 'layout'}"
+                        styleClass="form-validate #{externalLoginBean.uiStatus != 'accountCreation' ? '' : 'd-grid'}"
                         id="loginForm"
                         prependId="false">
                         <h:panelGroup id="globalWarningMessage">
