--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/index.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/index.scss
@@ -259,6 +259,7 @@ main h1 svg {
 
 .info-required {
   font-size: var(--fs-200);
+  margin-bottom: 2.4rem;
   span {
     color: var(--clr-primary-400);
   }
@@ -537,7 +538,7 @@ input ~ .font-danger {
   --progress-line-height: 2px;
 
   position: relative;
-  margin: 8rem auto;
+  margin: 0.8rem auto;
   width: 70%;
   display: flex;
   justify-content: space-between;
@@ -549,7 +550,7 @@ input ~ .font-danger {
     height: var(--progress-line-height);
     transform: translateY(-50%);
     top: calc(var(--progress-step-width) / 2 + var(--progress-line-height) / 2);
-    width: calc(100% - var(--progress-step-width) * 2);
+    width: 100%;
     z-index: -1;
     background-color: var(--clr-neutral-600);
   }
@@ -558,12 +559,15 @@ input ~ .font-danger {
     display: flex;
 
     &__link {
+      display: flex;
+      justify-content: center;
       text-decoration: none;
       color: var(--clr-text-body);
       font-size: var(--fs-200);
 
       &::before {
         display: inline-block;
+        position: absolute;
         content: "";
         width: var(--progress-step-width);
         height: var(--progress-step-width);
@@ -587,6 +591,18 @@ input ~ .font-danger {
         background-color: var(--clr-success);
       }
     }
+
+    &:last-child .zlb-progress__step__link {
+      justify-content: flex-end;
+    }
+
+    &:first-child .zlb-progress__step__link {
+      justify-content: flex-start;
+    }
+  }
+
+  &__step__name {
+    margin-top: 1.6rem;
   }
 }
 
@@ -596,10 +612,10 @@ input ~ .font-danger {
 .form-actions.form-actions--progress {
   display: flex;
 
-  margin: 3.2rem 0;
+  margin: 1.6rem 0;
 
   .btn {
-    align-self: flex-start;
+    align-self: baseline;
   }
   .btn-primary-400 {
     background-color: var(--clr-success);
