Fit header to small screens; refs #22612

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/header.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/header.xhtml
@@ -25,10 +25,10 @@
     <div class="actions">
         <div class="actions__lang">
 			      <ui:include src="/uii/includes/icon-language.xhtml" />
-            Language
+            <span>Language</span>
         </div>
         <div class="actions__user">
-            User Name
+            <span>User Name</span>
 			      <ui:include src="/uii/includes/icon-logo-intranda.xhtml" />
         </div>
     </div>
